--- a/part2/Mypage-good.html
+++ b/part2/Mypage-good.html
@@ -14,22 +14,23 @@
 
     <!-- Custom styles for this template -->
     <link href="./Bootstrap_files/theme.css" rel="stylesheet">
-
-
-	<body id="body1">
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             
           </button>
-          <a class="navbar-brand" href="#">Yu Zuo</a>
+          <a class="navbar-brand" href="#body1">Yu Zuo</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav">
 
-            <li class="active"><a href="#">Welcome to My personal webpage</a></li>
+            <li class="active"><a href="#body1">Home</a></li>
+            <li><a href="#section_his">History</a></li>
+            <li><a href="#section_work">Life-point</a></li>
+            <li><a href="#section_offer">Courses</a></li>
+
 
 
               </ul>
@@ -42,9 +43,12 @@
       
     </nav>
 
+	<body id="body1">
+		
+
 
 		<div id="div1">
-		<section>
+		<section id="section_intro">
 		<h1>Yu Zuo</h1>
 		<img src="image/Yu.JPG">
 		<br>
@@ -74,6 +78,7 @@
 
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      	<h1>Some funny picture about me</h1>
         <ol class="carousel-indicators">
           <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
           <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
@@ -89,7 +94,7 @@
             <img id="img_header" alt="Second slide [1140x500]" src="image/yu2.JPG" data-holder-rendered="true">
           </div>
           <div class="item">
-            <img id="img_header" alt="Third slide [1140x500]" src="image/yu3.JPG" data-holder-rendered="true">
+            <img id="img_header" alt="Third slide [1140x500]" src="image/yu4.JPG" data-holder-rendered="true">
           </div>
           <div class="item">
             <img id="img_header" alt="Third slide [1140x500]" src="image/dreamtea.PNG" data-holder-rendered="true">
@@ -107,16 +112,30 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-		<section>
-		<h2>My History</h2>
-		<p>
+		<section id="section_his">
+		<br/>
+		<br/>
+		<br/>
+
+		<h1>My History</h1>
+		<table>
+		<tr>
+		<td>
 			I was born in a small town in Anhui in 1991. During the  primary school and middle school, I was a truble maker. At that time I don't like staying at home. I always go out-side to play until night. However, when I enter the high school which is called Maple leaf International School, my life was changed. The teachers were really nice in there and gave me a lot of encourage to study. I had a really wonderful 3 years in that school. After that I went out of my contury and came in Canada. In Uinversity of Alberta, I met a lot of good friends, and I also learn how to live without family.
-		</p>
+		</td>
+		<td> <img src="image/yu3.JPG"></td>
+		</tr>
+	</table>
 			
 		</section>
-		
-		<section>
-		<h2>Work Experience & Volunteer Experence</h2>
+
+		<section id="section_work">
+
+		<br/>
+		<br/>
+		<br/>
+
+		<h1>Work Experience & Volunteer Experence</h1>
 		<ul>
 			<li><strong>Anhui Tongling Traffic Brigade(volunteer)</strong><br>
 				- To govern Traffic (ex: parking)</li>
@@ -149,11 +168,14 @@
 					- Seclude the meeting.<br>
 					- Working on the real code.<br>
 					- Design our project.<br>
-					- Product: Dream Tea House Website: <a href="http://www.dreamtea.ca">www.dreamtea.ca</a></li>
+					- Product: Dream Tea House Website: <a href="http://www.dreamtea.ca" target="_blank">www.dreamtea.ca</a></li>
 		</ul>
 		</section>
-		<section>
-		<h2>What I have to offer</h2>
+		<section id="section_offer">
+		<br/>
+		<br/>
+		<br/>
+		<h1>What I have to offer</h1>
 		<ul>
 			<li><strong>Computing Science 114:</strong> Python Game<br/>
 				- Using python and py-game method to write some small game.</li>
